# lar_comau

./: CMakeLists.txt  comau_run_procedure  package.xml
include/commons/: ComauSmartSix.h  FIROrder2.h
launch/: comau_server.launch  comau_server_only_joints.launch  comau_server_test.launch  display.launch  robot_state.launch  robot_state_publisher.launch  testing.launch
msg/: ComauCommand.msg  ComauState.msg  MachineAlarmStatus.msg  MachineAlarmStatus.msg~
src/: camera_on_robot_calibration.cpp  comau_bridge_udp.cpp  comau_cartesian_controller.cpp  comau_cartesian_publisher_udp_from_comau.cpp  comau_driver.cpp  comau_driver.cpp.save  comau_driver_new.cpp  comau_driver_new_BU.cpp  comau_driver_test.cpp  comau_driver_working.cpp  dan_tester.cpp  gripper_test_novembre.cpp
src/commons/: ComauSmartSix.cpp  FIROrder2.cpp
stuffs/: ros_comau_connection  ros_comau_disconnection
stuffs/C4GLibrary/: Makefile  install.txt
stuffs/C4GLibrary/Documentation/: Doxyfile
stuffs/C4GLibrary/Documentation/html/: C4gOpenConstants_8hpp-source.html  C4gOpenConstants_8hpp.html  C4gOpen_8cpp-source.html  C4gOpen_8cpp.html  C4gOpen_8hpp-source.html  C4gOpen_8hpp.html  annotated.html  classC4gOpen-members.html  classC4gOpen.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_vars.html  index.html  main.html  structAxisDataRx-members.html  structAxisDataRx.html  structAxisDataTx-members.html  structAxisDataTx.html  structCommPacketRx-members.html  structCommPacketRx.html  structCommPacketTx-members.html  structCommPacketTx.html  structHeader-members.html  structHeader.html  structInitPacket-members.html  structInitPacket.html  tree.html
stuffs/C4GLibrary/include/: C4gOpen.h  C4gOpen.hpp  C4gOpenConstants.h  Makefile
stuffs/C4GLibrary/lib/: C4gOpen.cpp  C4gOpen_mio.cpp  Makefile
stuffs/C4GLibrary/testsuite/: Makefile  commands
stuffs/C4GLibrary/testsuite/SimulinkMode4_SERVER/: Makefile  SimulinkMode4_server  SimulinkMode4_server.cpp
stuffs/C4GLibrary/testsuite/SimulinkMode5_SERVER/: Makefile  SimulinkMode5_server  SimulinkMode5_server (another copy).cpp  SimulinkMode5_server.cpp~  SimulinkMode5_server_senza_flag.cpp  nodo_comau.cpp~  sendToSimulink.mdl
stuffs/C4GLibrary/testsuite/TestMode0Debug/: Makefile  TestMode0Debug  TestMode0Debug.cpp
stuffs/C4GLibrary/testsuite/TestMode1/: Makefile  TestMode1  TestMode1.cpp
stuffs/C4GLibrary/testsuite/TestMode2/: Makefile  TestMode2  TestMode2.cpp
stuffs/C4GLibrary/testsuite/TestMode4/: Makefile  TestMode4  TestMode4.cpp
stuffs/C4GLibrary/testsuite/TestMode4_SERVER/: Makefile  TestMode4_server  TestMode4_server.cpp
stuffs/C4GLibrary/testsuite/TestMode5/: Makefile  TestMode5  TestMode5.cpp
stuffs/C4GLibrary/testsuite/TestMode5_SERVER/: Makefile  SimulinkMode5_server.cpp  TestMode4_server.cpp  TestMode5_server  TestMode5_server_old_with_command_line.cpp
stuffs/C4GLibrary/testsuite/TestMode8/: Makefile  TestMode8  TestMode8.cpp
stuffs/C4GLibrary/testsuite/TestMode9/: Makefile  TestMode9  TestMode9.cpp
stuffs/OrchestraC4GLibrary_v1.16.00/: OrchestraC4GLibrary_v1.16.00.tar.bz2  install.txt  license.txt
stuffs/OrchestraC4GLibrary_v1.16.00/OrchestraC4GLibrary/: Makefile
stuffs/OrchestraC4GLibrary_v1.16.00/OrchestraC4GLibrary/examples/: Makefile
stuffs/OrchestraC4GLibrary_v1.16.00/OrchestraC4GLibrary/examples/Mode1/: Actuator.cpp  Actuator.xmi  Generator.cpp  Generator.xmi  Generator.xmp  Loop.xcl  Makefile  Sensor.cpp  Sensor.xmi
stuffs/OrchestraC4GLibrary_v1.16.00/OrchestraC4GLibrary/examples/Mode5/: Actuator.cpp  Actuator.xmi  Generator.cpp  Generator.xmi  Generator.xmp  Loop.xcl  Makefile  Sensor.cpp  Sensor.xmi
stuffs/OrchestraC4GLibrary_v1.16.00/OrchestraC4GLibrary/examples/Mode8/: Actuator.cpp  Actuator.xmi  Generator.cpp  Generator.xmi  Generator.xmp  Loop.xcl  Makefile  Sensor.cpp  Sensor.xmi
stuffs/OrchestraC4GLibrary_v1.16.00/OrchestraC4GLibrary/examples/Mode9/: Actuator.cpp  Actuator.xmi  Generator.cpp  Generator.xmi  Generator.xmp  Loop.xcl  Makefile  Sensor.cpp  Sensor.xmi
stuffs/OrchestraC4GLibrary_v1.16.00/OrchestraC4GLibrary/modules/: Makefile
stuffs/OrchestraC4GLibrary_v1.16.00/OrchestraC4GLibrary/modules/cpp/: C4GActuatorMode1.cpp  C4GActuatorMode2.cpp  C4GActuatorMode4.cpp  C4GActuatorMode5.cpp  C4GActuatorMode7.cpp  C4GActuatorMode8.cpp  C4GActuatorMode9.cpp  C4GSensor.cpp
stuffs/OrchestraC4GLibrary_v1.16.00/OrchestraC4GLibrary/modules/xmi/: C4GActuatorMode1.xmi  C4GActuatorMode2.xmi  C4GActuatorMode5.xmi  C4GActuatorMode7.xmi  C4GActuatorMode8.xmi  C4GActuatorMode9.xmi  C4GSensor.xmi
stuffs/SIMULATORE_COMAU_UBHAND/: KinematicData.m  rotx.m  roty.m  rotz.m  trasx.m  trasy.m  trasz.m
stuffs/scripts/: bozza_commentata_codice_comau.cpp  comau_script  kinematics_senza_limiti.cpp  loadRTnet
stuffs/scripts/files_comau/: SimulinkMode5_server_senza_flag.cpp  bozza_tagliata_codice_comau.cpp  comau_script
urdf/: comau_smart_6.urdf  comau_smart_six.urdf.xacro  urdf.rviz
